# arbitrage-scanner

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: __init__.py  arbitrage.py  config.py  main.py  scheduler.py
src/fetchers/: ccxt_exchanges.py  uniswap.py
tests/: test_arbitrage.py
