[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-scanner"
version = "0.1.0"
description = "A tool for scanning arbitrage opportunities"
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
